syntax = "proto3";

package catservice;

option go_package = "catservice/pb";

message CreateCatRequest {
  string name = 1;
  string date_of_birth = 2;
  string image_url = 3;
}

message GetCatByIdRequest {
  string id = 1;
}

message CreateCatResponse {
  string id = 1;
}

message GetCatByIdResponse {
  Cat cat = 1;
}

message Cat {
  string id = 1;
  string name = 2;
  string date_of_birth = 3;
  string image_url = 4;
}

service CatService {
  rpc GetCatById(GetCatByIdRequest) returns (GetCatByIdResponse);
  rpc CreateCat(CreateCatRequest) returns (CreateCatResponse);
}